feature: Allies Controller and full frontend

--- a/app/(main)/allies/AlliesPage.module.css
+++ b/app/(main)/allies/AlliesPage.module.css
@@ -28,8 +28,9 @@
 }
 
 .sponsor img {
-    max-width: 100%;
-    height: auto;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
     margin-bottom: 10px;
 }
 
