--- a/app/admin/allies/AlliesPage.module.css
+++ b/app/admin/allies/AlliesPage.module.css
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.div {
+    margin: 20px 0;
+    padding: 20px;
 }
 
 .table {
