--- a/app/admin/raffles/RafflesPage.module.css
+++ b/app/admin/raffles/RafflesPage.module.css
@@ -63,8 +63,8 @@
 }
 
 .raffleImage {
-    width: 50%;
-    height: 50%;
+    width: 150px;
+    height: 150px;
     border-radius: 8px;
     object-fit: cover;
 }
